# CellAnnot-GPT

./: .dockerignore  .env.template  .gitignore  404.html  Dockerfile  LICENSE-text.html  Makefile  README.md  RELEASING.md  authors.html  docker-compose.yml  environment.yml  index.html  pkgdown.yml  prompts.md  pyproject.toml  requirements.txt  search.json
.github/workflows/: ci.yml  pkgdown.yml  r-cmd-check.yml
articles/: annotate-seurat.html  index.html
backend/api/: logging_config.py  main.py  middleware.py  models.py
backend/cache/: async_cache.py  redis_cache.py
backend/data_ingest/: marker_loader.py
backend/llm/: annotator.py  prompts.py  retrieval.py
backend/util/: gene_normalization.py
backend/validation/: crosscheck.py  report.py
clients/r/: Makefile  RELEASING.md
clients/r/gptcellannotator/: .Rbuildignore  .lintr  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.Rmd  README.md
clients/r/gptcellannotator/R/: annotate.R  cli.R  config.R  http.R  package.R  plot.R  result.R  seurat.R  zzz.R
clients/r/gptcellannotator/man/: gptca_annotate.Rd  gptca_config.Rd  gptcellannotator-package.Rd
clients/r/gptcellannotator/pkgdown/: _pkgdown.yml
clients/r/gptcellannotator/tests/: testthat.R
clients/r/gptcellannotator/tests/testthat/: test-annotate.R  test-config.R  test-http-mock.R  test-integration.R  test-lintr.R  test-seurat.R
clients/r/gptcellannotator/tests/testthat/fixtures/batch/: POST-https%3A%2F%2Fmocked.api%2Fannotate_batch.json
clients/r/gptcellannotator/tests/testthat/fixtures/http/mocked.api/: annotate_cluster-f30bd8-POST.json
clients/r/gptcellannotator/vignettes/: annotate-seurat.Rmd
clients/r/scripts/: install_github.R  install_local_tarball.R
clients/r/scripts/qa/: offline_cli.R  rest_workflow.R
config/: gene_synonyms.json  marker_sources.yaml  settings.py
data/: .gitignore
docs/: api_reference.md  architecture.md  benchmarking.md  benchmarks.md  demo.md  deployment.md  faq.md  getting_started.md  install.md  operations.md  roadmap.md  scanpy_integration.md  seurat_integration.md  why.md
docs/demo_assets/: README.md  pbmc_annotation.json
docs/reports/: .gitignore
docs/reports-test/20251013/: pbmc_small.json  pbmc_small.md
docs/reports/releases/0.2.0/: install_matrix.md
evaluation/: benchmark_runner.py  plots.py  report_templates.py
evaluation/datasets/: README.md  brain_cortex_small.json  lung_epithelial_small.json  mouse_pbmc_small.json  pbmc_small.json
frontend/: streamlit_app.py  utils.py
gpt_cell_annotator/: __init__.py  assets.py  cli.py  scanpy.py
gpt_cell_annotator/_assets/: __init__.py
gpt_cell_annotator/_assets/config/: marker_sources.yaml
gpt_cell_annotator/_assets/data/processed/: marker_db.parquet  marker_db.sqlite
news/: index.html
notebooks/: benchmark_vs_gptcelltype.ipynb  guardrail_visualization.ipynb  pbmc_workflow.ipynb
prompts/: python_scanpy_plan.md  r_package_plan.md
reference/: gptca_annotate.html  gptca_config.html  gptcellannotator-package.html  index.html
schemas/: annotation_result.schema.json
scripts/: build_marker_db.py  ci_build_smoke_anndata.py  run_benchmarks.py  run_tests.sh  setup_env.sh
tests/: conftest.py  test_annotator.py  test_api.py  test_benchmark_runner.py  test_cache.py  test_cli.py  test_frontend.py  test_gene_normalization.py  test_marker_loader.py  test_plots.py  test_prompts.py  test_retrieval.py  test_scanpy_integration.py  test_single_cluster.py  test_validation.py
tests/fixtures/marker_sources/: cellmarker.csv  panglao.csv  sources.yaml
